--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
@@ -18,6 +19,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "lucide-react": "^0.276.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
